--- a/jupyter/assignment_4.ipynb
+++ b/jupyter/assignment_4.ipynb
@@ -62,8 +62,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/11/26 11:04:58 WARN Utils: Your hostname, Sofies-Mac-Air.local resolves to a loopback address: 127.0.0.1; using 192.168.1.3 instead (on interface en0)\n",
-      "25/11/26 11:04:58 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+      "25/11/27 13:33:08 WARN Utils: Your hostname, Sofies-Mac-Air.local resolves to a loopback address: 127.0.0.1; using 192.168.1.3 instead (on interface en0)\n",
+      "25/11/27 13:33:08 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
      ]
     },
     {
@@ -80,7 +80,7 @@
       "Ivy Default Cache set to: /Users/sofiesveindal/.ivy2/cache\n",
       "The jars for the packages stored in: /Users/sofiesveindal/.ivy2/jars\n",
       "com.datastax.spark#spark-cassandra-connector_2.12 added as a dependency\n",
-      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-b0252c37-6a14-4d62-8c7e-906961185943;1.0\n",
+      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-5ce67939-76e9-4550-8510-1c8f24fae861;1.0\n",
       "\tconfs: [default]\n",
       "\tfound com.datastax.spark#spark-cassandra-connector_2.12;3.5.1 in central\n",
       "\tfound com.datastax.spark#spark-cassandra-connector-driver_2.12;3.5.1 in central\n",
@@ -98,7 +98,7 @@
       "\tfound org.apache.commons#commons-lang3;3.10 in central\n",
       "\tfound com.thoughtworks.paranamer#paranamer;2.8 in central\n",
       "\tfound org.scala-lang#scala-reflect;2.12.19 in central\n",
-      ":: resolution report :: resolve 569ms :: artifacts dl 28ms\n",
+      ":: resolution report :: resolve 2504ms :: artifacts dl 156ms\n",
       "\t:: modules in use:\n",
       "\tcom.datastax.oss#java-driver-shaded-guava;25.1-jre-graal-sub-1 from central in [default]\n",
       "\tcom.datastax.oss#native-protocol;1.5.1 from central in [default]\n",
@@ -122,10 +122,10 @@
       "\t---------------------------------------------------------------------\n",
       "\t|      default     |   16  |   0   |   0   |   0   ||   16  |   0   |\n",
       "\t---------------------------------------------------------------------\n",
-      ":: retrieving :: org.apache.spark#spark-submit-parent-b0252c37-6a14-4d62-8c7e-906961185943\n",
+      ":: retrieving :: org.apache.spark#spark-submit-parent-5ce67939-76e9-4550-8510-1c8f24fae861\n",
       "\tconfs: [default]\n",
-      "\t0 artifacts copied, 16 already retrieved (0kB/11ms)\n",
-      "25/11/26 11:04:59 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "\t0 artifacts copied, 16 already retrieved (0kB/20ms)\n",
+      "25/11/27 13:33:13 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
      ]
@@ -371,6 +371,8 @@
     "        column_mapping = {\n",
     "            'priceArea': 'pricearea',\n",
     "            'productionGroup': 'productiongroup',\n",
+    "            'consumptionGroup': 'consumptiongroup', \n",
+    "            'meteringPointCount': 'meteringpointcount',\n",
     "            'startTime': 'starttime',\n",
     "            'endTime': 'endtime',\n",
     "            'quantityKwh': 'quantitykwh',\n",
@@ -400,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +412,13 @@
       "\n",
       "--- Starting fetch for Dataset: PRODUCTION_PER_GROUP_MBA_HOUR (Years: [2022, 2023, 2024]) ---\n",
       "Expecting data under JSON key: 'productionPerGroupMbaHour'\n",
-      "Fetching data for year 2022...\n",
+      "Fetching data for year 2022...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "  -> Finished processing 2022.\n",
       "Fetching data for year 2023...\n",
       "  -> Finished processing 2023.\n",
@@ -455,14 +463,14 @@
       "4  PRODUCTION_PER_GROUP_MBA_HOUR  \n",
       "\n",
       "Consumption Data Head:\n",
-      "  consumptionGroup                    endtime            lastupdatedtime  \\\n",
+      "  consumptiongroup                    endtime            lastupdatedtime  \\\n",
       "0            cabin  2021-01-01T01:00:00+01:00  2024-12-20T10:35:40+01:00   \n",
       "1            cabin  2021-01-01T02:00:00+01:00  2024-12-20T10:35:40+01:00   \n",
       "2            cabin  2021-01-01T03:00:00+01:00  2024-12-20T10:35:40+01:00   \n",
       "3            cabin  2021-01-01T04:00:00+01:00  2024-12-20T10:35:40+01:00   \n",
       "4            cabin  2021-01-01T05:00:00+01:00  2024-12-20T10:35:40+01:00   \n",
       "\n",
-      "   meteringPointCount pricearea  quantitykwh                  starttime  \\\n",
+      "   meteringpointcount pricearea  quantitykwh                  starttime  \\\n",
       "0              100607       NO1    177071.56  2021-01-01T00:00:00+01:00   \n",
       "1              100607       NO1    171335.12  2021-01-01T01:00:00+01:00   \n",
       "2              100607       NO1    164912.02  2021-01-01T02:00:00+01:00   \n",
@@ -506,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -572,21 +580,22 @@
       "\n",
       "Consumption Spark DF Schema:\n",
       "root\n",
+      " |-- consumptiongroup: string (nullable = true)\n",
       " |-- pricearea: string (nullable = true)\n",
       " |-- starttime: timestamp (nullable = true)\n",
       " |-- endtime: timestamp (nullable = true)\n",
       " |-- quantitykwh: double (nullable = true)\n",
       " |-- lastupdatedtime: timestamp (nullable = true)\n",
+      " |-- meteringpointcount: long (nullable = true)\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "#### 4.1 Spark Transformation Function and Data Union\n",
     "def transform_pandas_to_spark_df(pandas_df, spark_session, data_type):\n",
     "    \"\"\"\n",
-    "    Converts Pandas (which is already snake_case from the fetch step) to Spark,\n",
-    "    and casts time columns to Spark Timestamp type (CRITICAL for Cassandra storage).\n",
+    "    Converts Pandas (which is already clean from the fetch step) to Spark,\n",
+    "    and casts time columns to Spark Timestamp type.\n",
     "    \"\"\"\n",
     "    if pandas_df.empty:\n",
     "        print(f\"Warning: Empty DataFrame provided for transformation ({data_type}). Returning empty Spark DF.\")\n",
@@ -601,15 +610,18 @@
     "             spark_df = spark_df.withColumn(\n",
     "                 col_name, \n",
     "                 to_timestamp(col(col_name), \"yyyy-MM-dd'T'HH:mm:ssXXX\") \n",
-    "             )\n",
+    "               )\n",
     "    \n",
     "    # Select final columns based on data type for the respective Cassandra tables\n",
-    "    base_cols = ['pricearea', 'starttime', 'endtime', 'quantitykwh', 'lastupdatedtime']\n",
+    "    # NOTE: meteringpointcount is included here now.\n",
+    "    base_cols = ['pricearea', 'starttime', 'endtime', 'quantitykwh', 'lastupdatedtime', 'meteringpointcount']\n",
     "    \n",
     "    if data_type == 'production':\n",
+    "        # Production data needs productiongroup\n",
     "        final_cols = ['productiongroup'] + base_cols\n",
     "    else: # Consumption data\n",
-    "        final_cols = base_cols\n",
+    "        # Consumption data needs consumptiongroup\n",
+    "        final_cols = ['consumptiongroup'] + base_cols\n",
     "        \n",
     "    # Filter columns to only include those present in the DataFrame\n",
     "    return spark_df.select([c for c in final_cols if c in spark_df.columns])\n",
@@ -657,14 +669,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Target Cassandra tables 'production_hourly' and 'consumption_hourly' explicitly dropped and re-created with the correct schema.\n"
+      "Target Cassandra tables 'production_hourly' and 'consumption_hourly' explicitly dropped and re-created with the correct schema, including all new fields.\n"
      ]
     }
    ],
@@ -674,19 +686,13 @@
     "consumption_table_name = \"consumption_hourly\"\n",
     "\n",
     "# --- CRITICAL FIX: Explicitly drop old tables to ensure the new schema is used ---\n",
-    "# If a previous run created these tables with snake_case column names,\n",
-    "# we must drop them to successfully re-create them with the new lowercase names.\n",
-    "\n",
-    "# 1. Drop the production table (including the old production_2021 table if it still exists)\n",
     "session.execute(f\"DROP TABLE IF EXISTS {keyspace_name}.production_2021;\")\n",
     "session.execute(f\"DROP TABLE IF EXISTS {keyspace_name}.{production_table_name};\")\n",
-    "\n",
-    "# 2. Drop the consumption table\n",
     "session.execute(f\"DROP TABLE IF EXISTS {keyspace_name}.{consumption_table_name};\")\n",
     "# ----------------------------------------------------------------------------------\n",
     "\n",
     "\n",
-    "# 3. Production Table: Re-create with the all-lowercase schema\n",
+    "# 3. Production Table: Re-create with the all-lowercase schema (Includes meteringpointcount)\n",
     "session.execute(f\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS {keyspace_name}.{production_table_name} (\n",
     "    pricearea text,\n",
@@ -695,22 +701,25 @@
     "    endtime timestamp,\n",
     "    quantitykwh double,\n",
     "    lastupdatedtime timestamp,\n",
+    "    meteringpointcount int,\n",
     "    PRIMARY KEY ((pricearea, productiongroup), starttime)\n",
     ");\n",
     "\"\"\")\n",
     "\n",
-    "# 4. Consumption Table: Re-create with the all-lowercase schema\n",
+    "# 4. Consumption Table: Re-create with the all-lowercase schema (Includes meteringpointcount)\n",
     "session.execute(f\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS {keyspace_name}.{consumption_table_name} (\n",
     "    pricearea text,\n",
+    "    consumptiongroup text,\n",
     "    starttime timestamp,\n",
     "    endtime timestamp,\n",
     "    quantitykwh double,\n",
     "    lastupdatedtime timestamp,\n",
-    "    PRIMARY KEY (pricearea, starttime)\n",
+    "    meteringpointcount int,\n",
+    "    PRIMARY KEY ((pricearea, consumptiongroup), starttime)\n",
     ");\n",
     "\"\"\")\n",
-    "print(f\"Target Cassandra tables '{production_table_name}' and '{consumption_table_name}' explicitly dropped and re-created with the correct schema.\")\n"
+    "print(f\"Target Cassandra tables '{production_table_name}' and '{consumption_table_name}' explicitly dropped and re-created with the correct schema, including all new fields.\")"
    ]
   },
   {
@@ -722,18 +731,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/11/26 11:16:05 WARN TaskSetManager: Stage 0 contains a task of very large size (8991 KiB). The maximum recommended task size is 1000 KiB.\n",
-      "25/11/26 11:16:10 WARN PythonRunner: Detected deadlock while completing task 0.0 in stage 0 (TID 0): Attempting to kill Python Worker\n",
-      "25/11/26 11:16:10 WARN TaskSetManager: Stage 1 contains a task of very large size (8991 KiB). The maximum recommended task size is 1000 KiB.\n",
-      "25/11/26 11:16:25 WARN TaskSetManager: Stage 2 contains a task of very large size (8991 KiB). The maximum recommended task size is 1000 KiB.\n",
-      "25/11/26 11:16:28 WARN TaskSetManager: Stage 5 contains a task of very large size (12677 KiB). The maximum recommended task size is 1000 KiB.\n"
+      "25/11/27 13:37:11 WARN TaskSetManager: Stage 0 contains a task of very large size (8991 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "25/11/27 13:37:18 WARN PythonRunner: Detected deadlock while completing task 0.0 in stage 0 (TID 0): Attempting to kill Python Worker\n",
+      "25/11/27 13:37:18 WARN TaskSetManager: Stage 1 contains a task of very large size (8991 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "25/11/27 13:37:41 WARN TaskSetManager: Stage 2 contains a task of very large size (8991 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "25/11/27 13:37:44 WARN TaskSetManager: Stage 5 contains a task of very large size (12677 KiB). The maximum recommended task size is 1000 KiB.\n"
      ]
     },
     {
@@ -748,9 +757,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/11/26 11:16:32 WARN PythonRunner: Detected deadlock while completing task 0.0 in stage 5 (TID 18): Attempting to kill Python Worker\n",
-      "25/11/26 11:16:32 WARN TaskSetManager: Stage 6 contains a task of very large size (12677 KiB). The maximum recommended task size is 1000 KiB.\n",
-      "25/11/26 11:16:46 WARN TaskSetManager: Stage 7 contains a task of very large size (12677 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "25/11/27 13:37:48 WARN PythonRunner: Detected deadlock while completing task 0.0 in stage 5 (TID 18): Attempting to kill Python Worker\n",
+      "25/11/27 13:37:49 WARN TaskSetManager: Stage 6 contains a task of very large size (12677 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "25/11/27 13:38:17 WARN TaskSetManager: Stage 7 contains a task of very large size (12677 KiB). The maximum recommended task size is 1000 KiB.\n",
       "[Stage 7:>                                                          (0 + 8) / 8]\r"
      ]
     },
@@ -807,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -822,9 +831,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/11/26 11:18:41 WARN TaskSetManager: Stage 10 contains a task of very large size (8991 KiB). The maximum recommended task size is 1000 KiB.\n",
-      "25/11/26 11:18:45 WARN PythonRunner: Detected deadlock while completing task 0.0 in stage 10 (TID 36): Attempting to kill Python Worker\n",
-      "25/11/26 11:18:45 WARN TaskSetManager: Stage 11 contains a task of very large size (8991 KiB). The maximum recommended task size is 1000 KiB.\n"
+      "25/11/27 13:38:21 WARN TaskSetManager: Stage 10 contains a task of very large size (8991 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "25/11/27 13:38:25 WARN PythonRunner: Detected deadlock while completing task 0.0 in stage 10 (TID 36): Attempting to kill Python Worker\n",
+      "                                                                                \r"
      ]
     },
     {
@@ -839,6 +848,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "25/11/27 13:38:27 WARN TaskSetManager: Stage 11 contains a task of very large size (8991 KiB). The maximum recommended task size is 1000 KiB.\n",
       "                                                                                \r"
      ]
     },
@@ -855,9 +865,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/11/26 11:23:16 WARN TaskSetManager: Stage 12 contains a task of very large size (12677 KiB). The maximum recommended task size is 1000 KiB.\n",
-      "25/11/26 11:23:20 WARN PythonRunner: Detected deadlock while completing task 0.0 in stage 12 (TID 45): Attempting to kill Python Worker\n",
-      "25/11/26 11:23:20 WARN TaskSetManager: Stage 13 contains a task of very large size (12677 KiB). The maximum recommended task size is 1000 KiB.\n"
+      "25/11/27 13:46:08 WARN TaskSetManager: Stage 12 contains a task of very large size (12677 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "25/11/27 13:46:12 WARN PythonRunner: Detected deadlock while completing task 0.0 in stage 12 (TID 45): Attempting to kill Python Worker\n",
+      "25/11/27 13:46:12 WARN TaskSetManager: Stage 13 contains a task of very large size (12677 KiB). The maximum recommended task size is 1000 KiB.\n"
      ]
     },
     {
